ai_devops/cloud-deploy/kubernetes/review/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $KUBE_NAMESPACE-app-$CI_COMMIT_REF_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    # Standard labels - follow these patterns, additional labels can be added if needed
    app: $KUBE_NAMESPACE-app-$CI_COMMIT_REF_SLUG       # This is our standard, do not change
    environment: $DOPPLER_ENVIRONMENT                  # This is our standard, do not change (output pulled from doppler will be either dev_,dev,stg,or prd)   
    gitlab_project: $CI_PROJECT_NAME                   # This is our standard, do not change   
    gitlab_pipeline_id: "$CI_PIPELINE_ID"              # This is our standard, do not change   
    project_owner: web                                 # Select only from one of the following (web, api, sre, data, or rock)
    tier: backend                                      # Select only from one of the following (frontend, backend, database or job)   
spec:
  selector:
    matchLabels:
      app: $KUBE_NAMESPACE-app-$CI_COMMIT_REF_SLUG   
  template:
    metadata:
      labels:
        # Standard labels - follow these patterns, additional labels can be added if needed
        app: $KUBE_NAMESPACE-app-$CI_COMMIT_REF_SLUG.  # This is our standard, do not change, should match the labels from the deployment
        environment: $DOPPLER_ENVIRONMENT              # This is our standard, do not change, should match the labels from the deployment (output pulled from doppler will be either dev_,dev,stg,or prd)   
        gitlab_project: $CI_PROJECT_NAME               # This is our standard, do not change, should match the labels from the deployment  
        gitlab_pipeline_id: "$CI_PIPELINE_ID"          # This is our standard, do not change, should match the labels from the deployment
        project_owner: web                             # Select only from one of the following (web, api, sre, data, or rock), should match the labels from the deployment 
        tier: backend                                  # Select only from one of the following (frontend, backend, database or job), should match the labels from the deployment    
# Section will be project needs specific    
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: $KUBE_NAMESPACE-app-$CI_COMMIT_REF_SLUG
        image: gcr.io/${PROJECT_ID}/${CI_PROJECT_NAME}:$CI_COMMIT_SHA-$CI_PIPELINE_ID
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /_healthz
            port: 3000
            scheme: HTTP
            httpHeaders:
              - name: host
                value: 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /_healthz
            port: 3000
            scheme: HTTP
            httpHeaders:
              - name: host
                value: 127.0.0.1
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
        command: ["bundle", "exec", "unicorn", "-p", "3000", "-c", "./config/unicorn.rb"]
